--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.8.0",
     "@nestjs/platform-socket.io": "^6.8.0",
+    "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "@nestjs/websockets": "^6.8.0",
     "@nestjsx/crud": "^4.2.0",
@@ -42,6 +43,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "sqlite3": "^4.1.0",
+    "swagger-ui-express": "^4.1.2",
     "typeorm": "^0.2.19"
   },
   "devDependencies": {
