--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "export NODE_ENV=development && ts-node -r tsconfig-paths/register src/server.ts",
-    "start:dev": "export NODE_ENV=development && tsc-watch -p tsconfig.build.json --onSuccess \"node dist/server.js\"",
-    "start:debug": "export NODE_ENV=development && tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/server.js\"",
-    "start:prod": "export NODE_ENV=production && node dist/server.js",
+    "start": "export NODE_ENV=development && export NODE_OPTIONS=--max_old_space_size=4096 && ts-node -r tsconfig-paths/register src/server.ts",
+    "start:dev": "export NODE_ENV=development && export NODE_OPTIONS=--max_old_space_size=4096 && tsc-watch -p tsconfig.build.json --onSuccess \"node dist/server.js\"",
+    "start:debug": "export NODE_ENV=development && export NODE_OPTIONS=--max_old_space_size=4096 && tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/server.js\"",
+    "start:prod": "export NODE_ENV=production && export NODE_OPTIONS=--max_old_space_size=4096 && node dist/server.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "export NODE_ENV=test && jest",
+    "test:watch": "export NODE_ENV=test && jest --watch",
+    "test:cov": "export NODE_ENV=test && jest --coverage",
+    "test:debug": "export NODE_ENV=test && node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "export NODE_ENV=test && jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^6.0.0",
@@ -36,6 +36,7 @@
     "dotenv-flow": "^3.1.0",
     "helmet": "^3.21.0",
     "mongodb": "^3.3.2",
+    "nest-schedule": "^0.6.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
